--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>Alexwar</title>
 	</head>
 	<body>
-		<h1> Hello World </h1>
+		<h1>Alexwar Page</h1>
+		<h2>This is a personal page of alexwar, and, in this, he show to you anithing of this projects</h2>
 	</body>
 </html>
